css gets created, bundled-js-file works, hot-reload in browser works - nice

--- a/src/main/ts/tsconfig.json
+++ b/src/main/ts/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-        "outDir": "../../../dist/main/ts",
-        "module": "umd",
+        "outDir": "../../../ts",
+        "module": "commonjs",
         "target": "es6",
         "sourceMap": true,
         "inlineSources": true,
