--- a/package.json
+++ b/package.json
@@ -1,27 +1,44 @@
 {
-    "name": "typescript-starter",
-    "version": "1.0.0",
-    "description": "This is a starter project for typescript projects",
-    "main": "dist/index.js",
-    "scripts": {
-        "start": "lite-server",
-        "build": "tsc",
-        "test": "mocha -r ts-node/register src/test/**/*.ts"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/electricessence/typescript-starter.git"
-    },
-    "author": "electricessence",
-    "license": "MIT",
-    "dependencies": {},
-    "devDependencies": {
-        "@types/mocha": "^2.2.48",
-        "@types/node": "^7.0.18",
-        "lite-server": "^2.4.0",
-        "mocha": "^3.3.0",
-        "ts-loader": "^4.4.2",
-        "ts-node": "^3.0.4",
-        "typescript": "^3.0.1"
-    }
+  "name": "typescript-starter",
+  "author": "Mike Mitterer",
+  "version": "1.0.0",
+  "description": "This is a starter project for typescript projects",
+  "license": "MIT",
+  "main": "dist/js/index.js",
+  "scripts": {
+    "server": "webpack-dev-server --mode development",
+    "build": "webpack --mode development",
+    "build:prod": "webpack --mode production",
+    "test": "mocha -r ts-node/register src/test/**/*.ts"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MikeMitterer/typescript-training"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "@types/mocha": "^2.2.48",
+    "@types/node": "^7.0.69",
+    "autoprefixer": "^8.6.3",
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "html-beautify-webpack-plugin": "^1.0.5",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-string-replace-plugin": "^1.1.0",
+    "mini-css-extract-plugin": "^0.4.0",
+    "mocha": "^3.3.0",
+    "node-sass": "^4.8.3",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
+    "ts-loader": "^4.4.2",
+    "ts-node": "^3.0.4",
+    "tslint": "^5.9.1",
+    "tslint-loader": "^3.5.3",
+    "typescript": "^3.0.1",
+    "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5"
+  }
 }
