--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-starter",
+  "name": "@mike.mitterer/typescript-starter",
   "author": "Mike Mitterer",
   "version": "1.0.0",
   "description": "This is a starter project for typescript projects",
@@ -9,30 +9,36 @@
     "start": "NODE_ENV=development webpack-dev-server --mode development",
     "build": "NODE_ENV=development webpack --mode development",
     "build:prod": "NODE_ENV=production webpack --mode production",
-    "test": "mocha -r ts-node/register src/test/**/*.ts"
+    "test": "mocha -r ts-node/register src/test/**/*.ts",
+    "publish-please": "publish-please",
+    "prepublishOnly": "publish-please guard"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/MikeMitterer/typescript-training"
   },
   "typings": "index.d.ts",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/jest": "^23.3.9",
     "@types/node": "^7.10.2",
-    "autoprefixer": "^9.1.5",
+    "autoprefixer": "^9.3.1",
     "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^0.28.11",
     "expose-loader": "^0.7.5",
+    "file-loader": "^2.0.0",
     "html-beautify-webpack-plugin": "^1.0.5",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-string-replace-plugin": "^1.1.0",
+    "image-webpack-loader": "^4.5.0",
     "jest": "^23.6.0",
     "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.10.0",
+    "postcss": "^7.0.6",
     "postcss-loader": "^3.0.0",
+    "publish-please": "^5.3.0",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "ts-jest": "^23.10.4",
