Jest - Watchmode funkt

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "NODE_ENV=development webpack-dev-server --mode development",
     "build": "NODE_ENV=development webpack --mode development",
     "build:prod": "NODE_ENV=production webpack --mode production",
-    "test": "mocha -r ts-node/register src/test/**/*.ts",
+    "test": "jest",
     "publish-please": "publish-please",
     "prepublishOnly": "publish-please guard"
   },
@@ -29,7 +29,6 @@
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^0.28.11",
-    "expose-loader": "^0.7.5",
     "file-loader": "^2.0.0",
     "html-beautify-webpack-plugin": "^1.0.5",
     "html-loader": "^0.5.5",
@@ -37,6 +36,7 @@
     "html-webpack-string-replace-plugin": "^1.1.0",
     "image-webpack-loader": "^4.5.0",
     "jest": "^23.6.0",
+    "jest-cli": "^23.6.0",
     "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.10.0",
     "postcss": "^7.0.6",
