--- a/package.json
+++ b/package.json
@@ -4,20 +4,30 @@
   "version": "0.1.0",
   "description": "This is a starter project for typescript projects",
   "license": "MIT",
+
   "main": "dist/js/index.js",
+  "types": "dist/types/main/ts/index.d.ts",
+
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server --mode development",
     "build": "NODE_ENV=development webpack --mode development",
     "build:prod": "NODE_ENV=production webpack --mode production",
     "test": "jest",
-    "deploy": "publish-please",
+    "deploy:ts" : "npm run build:prod && tsc && rm -rf dist/types/test",
+    "deploy": "npm run deply:ts && publish-please",
     "prepublishOnly": "publish-please guard"
   },
+  "files" : [
+    "dist/",
+    "types/",
+    "src/main/ts/"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/MikeMitterer/typescript-training"
   },
   "typings": "index.d.ts",
+
   "dependencies": {
     "typescript-logging": "^0.6.3"
   },
