--- a/package.json
+++ b/package.json
@@ -1,44 +1,58 @@
 {
-  "name": "@mike.mitterer/typescript-starter",
+  "name": "@mmit/typescript-starter",
   "author": "Mike Mitterer",
-  "version": "0.1.1",
+  "version": "0.1.9",
   "description": "This is a starter project for typescript projects",
   "license": "MIT",
-
-  "main": "dist/js/index.js",
-  "types": "dist/types/main/ts/index.d.ts",
-
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server --mode development",
-    "build": "NODE_ENV=development webpack --mode development",
-    "build:prod": "NODE_ENV=production webpack --mode production",
+    "tc": "tsc --noEmit",
+    "tc:watch": "npm run tc -- --watch",
+    "build": "rm -rf lib && npm run build:types && npm run build:js",
+    "build:types": "tsc --emitDeclarationOnly && rm -rf lib/test",
+    "build:js": "babel src --out-dir lib --ignore src/test/* --extensions \".ts,.tsx\" --source-maps inline",
+    "bundle": "NODE_ENV=development webpack --mode development",
+    "bundle:prod": "NODE_ENV=production webpack --mode production",
     "test": "jest",
-    "deploy:ts" : "npm run build:prod && tsc && rm -rf dist/types/test",
-    "deploy": "npm run deploy:ts && publish-please",
-    "prepublishOnly": "publish-please guard"
+    "deploy:lib": "rm -rf lib && npm run build && cat package.json | sed 's/\"(lib|dist)\\//\"/g' > lib/package.json && cp README.md lib/",
+    "deploy:web": "rm -rf dist && npm run bundle && cat package.json | sed -E -e 's/\"(lib|dist)\\//\"js\\//g' > dist/package.json && cp README.md dist/",
+    "deploy:web:prod": "rm -rf dist && npm run bundle:prod && cat package.json | sed -E -e 's/\"(lib|dist)\\//\"js\\//g' > dist/package.json && cp README.md dist/",
+    "link": "npm run build && cd dist && npm link"
   },
-  "files" : [
-    "dist/",
-    "types/",
-    "src/main/ts/"
+  "files": [
+    "lib"
   ],
   "repository": {
     "type": "git",
     "url": "https://github.com/MikeMitterer/typescript-training"
   },
+  "type-check": "tsc",
   "typings": "index.d.ts",
-
   "dependencies": {
+    "core-js": "^2.5.7",
     "typescript-logging": "^0.6.3"
   },
   "devDependencies": {
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.2",
+    "@babel/node": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-typescript": "^7.1.0",
+    "@types/core-js": "^2.5.0",
     "@types/jest": "^23.3.9",
-    "@types/node": "^7.10.2",
+    "@types/node": "^10.0.0",
+    "@types/shelljs": "^0.8.0",
     "autoprefixer": "^9.3.1",
     "awesome-typescript-loader": "^5.2.1",
-    "clean-webpack-plugin": "^0.1.19",
+    "babel-loader": "^8.0.4",
+    "babel-preset-modern-browsers": "^13.0.0",
+    "clean-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^0.28.11",
+    "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
     "html-beautify-webpack-plugin": "^1.0.5",
     "html-loader": "^0.5.5",
@@ -47,20 +61,21 @@
     "image-webpack-loader": "^4.5.0",
     "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
-    "mini-css-extract-plugin": "^0.4.4",
+    "mini-css-extract-plugin": "^0.4.5",
     "node-sass": "^4.10.0",
     "postcss": "^7.0.6",
     "postcss-loader": "^3.0.0",
-    "publish-please": "^5.3.0",
-    "sass-loader": "^6.0.7",
-    "style-loader": "^0.20.3",
-    "ts-jest": "^23.10.4",
-    "ts-loader": "^4.5.0",
-    "ts-node": "^3.0.4",
+    "sass-loader": "^7.0.0",
+    "semver": "^5.6.0",
+    "shelljs": "^0.8.3",
+    "style-loader": "^0.23.0",
+    "ts-jest": "^23.10.5",
+    "ts-loader": "^5.0.0",
+    "ts-node": "^7.0.0",
     "tslint": "^5.9.1",
     "tslint-loader": "^3.5.4",
     "typescript": "^3.1.6",
-    "webpack": "^4.25.1",
+    "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
     "webpack-livereload-plugin": "^2.1.1"
