--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "deploy:lib": "rm -rf lib && npm run build && cat package.json | sed -E -e 's/\"(lib|dist)\\/*/\"/g' > lib/package.json && cp README.md lib/",
     "deploy:web": "rm -rf dist && npm run bundle && cat package.json | sed -E -e 's/\"(lib|dist)\\//\"js\\//g' > dist/package.json && cp README.md dist/",
     "deploy:web:prod": "rm -rf dist && npm run bundle:prod && cat package.json | sed -E -e 's/\"(lib|dist)\\//\"js\\//g' > dist/package.json && cp README.md dist/",
-    "link": "npm run build && cd dist && npm link"
+    "doc": "typedoc --out doc"
   },
   "files": [
     "lib"
@@ -74,6 +74,7 @@
     "ts-node": "^7.0.0",
     "tslint": "^5.9.1",
     "tslint-loader": "^3.5.4",
+    "typedoc": "^0.13.0",
     "typescript": "^3.1.6",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
