WebPack erstellt auch eine Node-Version

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -58,7 +58,7 @@
        // "@images/*":                   [ "site/images/*"]
     },
 
-    "lib": ["es2017", "dom"]
+    "lib": ["esnext", "dom"]
     // "lib": [ "dom"],
     // "types": ["node"],
 
@@ -80,5 +80,9 @@
 
     // Damit werden die images erkannt
     "src/site/images/typings.d.ts"
+  ],
+  "exclude": [
+    "lib",
+    "node_modules"
   ]
 }
