--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,27 @@
 {
   "presets": [
-    "@babel/env",
+    ["@babel/preset-env", {
+      "targets": {
+        "browsers": ["last 2 versions"]
+      }
+    }],
     "@babel/typescript"
   ],
   "plugins": [
     "@babel/proposal-class-properties",
     "@babel/proposal-object-rest-spread"
+  ],
+  "env": {
+    "node": {
+      "presets": [
+        ["@babel/preset-env", {
+          "targets": {
+            "esmodules": true,
+            "node": "current"
+          },
+          "modules": "auto"
+        }]
   ]
+}
+  }
 }
