--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "version": "0.2.0",
   "description": "This is a starter project for typescript projects",
   "license": "MIT",
+
+  "type-check": "tsc",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+
   "scripts": {
-    "start": "NODE_ENV=development webpack-dev-server --mode development",
+    "start": "NODE_ENV=development webpack-dev-server --config webpack.web.js --mode development",
     "tc": "tsc --noEmit",
     "tc:watch": "npm run tc -- --watch",
     "build": "rm -rf lib && npm run build:types && npm run build:js",
     "build:types": "tsc --emitDeclarationOnly && rm -rf lib/test",
     "build:js": "babel src --out-dir lib --ignore src/test/* --extensions \".ts,.tsx\" --source-maps inline",
-    "bundle": "NODE_ENV=development webpack --mode development",
-    "bundle:prod": "NODE_ENV=production webpack --mode production",
+    "bundle": "NODE_ENV=development webpack --config webpack.web.js --mode development",
+    "bundle:prod": "NODE_ENV=production webpack --config webpack.web.js --mode production",
     "test": "jest",
     "deploy:lib": "rm -rf lib && npm run build && cat package.json | sed -E -e 's/\"(lib|dist)\\/*/\"/g' > lib/package.json && cp README.md lib/",
     "deploy:web": "rm -rf dist && npm run bundle && cat package.json | sed -E -e 's/\"(lib|dist)\\//\"js\\//g' > dist/package.json && cp README.md dist/",
@@ -28,10 +31,7 @@
     "type": "git",
     "url": "https://github.com/MikeMitterer/typescript-training"
   },
-  "type-check": "tsc",
-  "typings": "index.d.ts",
   "dependencies": {
-    "core-js": "^2.5.7",
     "typescript-logging": "^0.6.3"
   },
   "devDependencies": {
@@ -40,7 +40,7 @@
     "@babel/node": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-env": "^7.1.6",
     "@babel/preset-typescript": "^7.1.0",
     "@types/core-js": "^2.5.0",
     "@types/jest": "^23.3.9",
@@ -48,17 +48,18 @@
     "@types/shelljs": "^0.8.0",
     "autoprefixer": "^9.3.1",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "babel-preset-modern-browsers": "^13.0.0",
     "clean-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.6.0",
+    "core-js": "^2.5.7",
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
     "html-beautify-webpack-plugin": "^1.0.5",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-string-replace-plugin": "^1.1.0",
-    "image-webpack-loader": "^4.5.0",
     "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
     "mini-css-extract-plugin": "^0.4.5",
@@ -76,9 +77,11 @@
     "tslint-loader": "^3.5.4",
     "typedoc": "^0.13.0",
     "typescript": "^3.1.6",
+    "url-loader": "^1.1.2",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
-    "webpack-livereload-plugin": "^2.1.1"
+    "webpack-livereload-plugin": "^2.1.1",
+    "webpack-node-externals": "^1.7.2"
   }
 }
