--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "version": "0.2.0",
   "description": "This is a starter project for typescript projects",
   "license": "MIT",
-
   "type-check": "tsc",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server --config webpack.web.js --mode development",
     "tc": "tsc --noEmit",
@@ -16,7 +14,9 @@
     "build": "rm -rf lib && npm run build:types && npm run build:js",
     "build:types": "tsc --emitDeclarationOnly && rm -rf lib/test",
     "build:js": "babel src --out-dir lib --ignore src/test/* --extensions \".ts,.tsx\" --source-maps inline",
+    "build:js:dart": "babel src --out-dir src/main/dart/web/assets/js --ignore src/test/* --extensions \".ts,.tsx\" --source-maps inline",
     "bundle": "NODE_ENV=development webpack --config webpack.web.js --mode development",
+    "bundle:dart": "NODE_ENV=development USE_DART=true webpack --config webpack.dart.js --mode development",
     "bundle:prod": "NODE_ENV=production webpack --config webpack.web.js --mode production",
     "test": "jest",
     "deploy:lib": "rm -rf lib && npm run build && cat package.json | sed -E -e 's/\"(lib|dist)\\/*/\"/g' > lib/package.json && cp README.md lib/",
@@ -48,12 +48,10 @@
     "@types/shelljs": "^0.8.0",
     "autoprefixer": "^9.3.1",
     "awesome-typescript-loader": "^5.2.1",
-    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "babel-preset-modern-browsers": "^13.0.0",
     "clean-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.6.0",
-    "core-js": "^2.5.7",
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
     "html-beautify-webpack-plugin": "^1.0.5",
