--- a/tsconfig.json
+++ b/tsconfig.json
@@ -74,8 +74,8 @@
   },
   "include" : [
     "src/index.ts",
-    "src/main/ts",
-    "src/test/ts",
+    "src/main/ts/**/*.ts",
+    "src/test/ts/**/*.ts",
     "src/site/images",
 
     // Damit werden die images erkannt
