Funkt mit node-package (@mmit/mobiad-communication)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,86 +3,78 @@
 //    https://marcobotto.com/blog/compiling-and-bundling-typescript-libraries-with-webpack/
 //
 {
-  "compileOnSave" :   true,
-  "compilerOptions" : {
-    "target" :                       "esnext",
+    "compileOnSave": true,
+    "compilerOptions": {
+        "target": "esnext",
 
-    "outDir" :                       "./lib",
-    "rootDir":                       "./src",
-    
-    "module" :                       "commonjs",
-    "moduleResolution" :             "node",
+        "outDir": "./lib",
+        "rootDir": "./src",
 
-    "sourceMap" :                    true,
-    "inlineSources" :                true,
-    "noImplicitAny" :                true,
-    "noImplicitThis" :               true,
-    "noUnusedParameters" :           true,
-    "noUnusedLocals" :               true,
-    "noEmitOnError" :                true,
-    "strictNullChecks" :             true,
-    "preserveConstEnums" :           true,
-    "removeComments" :               false,
-    "experimentalDecorators" :       true,
-    "emitDecoratorMetadata" :        true,
-    "allowSyntheticDefaultImports" : true,
+        "module": "commonjs",
+        "moduleResolution": "node",
 
-    // Enables emit interoperability between CommonJS and ES Modules
-    // via creation of namespace objects for all imports.
-    // Implies 'allowSyntheticDefaultImports'
-    //
-    // Import von Images funkt nicht mehr
-    // "esModuleInterop":            true,
+        "sourceMap": true,
+        "inlineSources": true,
+        "noImplicitAny": true,
+        "noImplicitThis": true,
+        "noUnusedParameters": true,
+        "noUnusedLocals": true,
+        "noEmitOnError": true,
+        "strictNullChecks": true,
+        "preserveConstEnums": true,
+        "removeComments": false,
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
+        "allowSyntheticDefaultImports": true,
+        "strictFunctionTypes": true,
 
+        // Enables emit interoperability between CommonJS and ES Modules
+        // via creation of namespace objects for all imports.
+        // Implies 'allowSyntheticDefaultImports'
+        //
+        // Import von Images funkt nicht mehr
+        // "esModuleInterop": true,
 
-    "strict" :                       true,
+        "strict": true,
 
-    // wird mit tsc erstellt
-    "declaration" :                  true,
+        // wird mit tsc erstellt
+        "declaration": true,
 
-    // Hier landen die types - sonst kommen sie
-    // ins outDir
-    //
-    //"declarationDir" :               "dist",
+        // Hier landen die types - sonst kommen sie
+        // ins outDir
+        //
+        //"declarationDir" :               "dist",
 
-    "baseUrl":                       "./src",
-    "paths": {
+        "baseUrl": "./src",
+        "paths": {
+            // Pfade müssen auch in WebPack entsprechend definiert sein!
+            // Funktioniert nicht!
+            //  https://github.com/Microsoft/TypeScript/issues/10866
+            // "@main/*":                     [ "main/ts/*"],
+            // "@test/*":                     [ "test/ts/*"],
+            // "@images/*":                   [ "site/images/*"]
+        },
 
+        "lib": ["esnext", "dom"]
+        // "lib": [ "dom"],
+        // "types": ["node"],
 
-       // Pfade müssen auch in WebPack entsprechend definiert sein!
-
-       // Funktioniert nicht!
-       //  https://github.com/Microsoft/TypeScript/issues/10866
-       // "@main/*":                     [ "main/ts/*"],
-       // "@test/*":                     [ "test/ts/*"],
-       // "@images/*":                   [ "site/images/*"]
+        // Fallback wenn nach d.ts Files gesucht wird
+        // "typeRoots": ["node_modules/@types", "src/types"]
     },
+    // https://github.com/s-panferov/awesome-typescript-loader
+    "awesomeTypescriptLoaderOptions": {
+        "useCache": false,
+        "reportFiles": ["src/**/*.{ts,tsx}"]
+    },
+    "include": [
+        "src/index.ts",
+        "src/main/**/*.ts",
+        "src/test/**/*.ts",
+        "src/site/images",
 
-    "lib": ["esnext", "dom"]
-    // "lib": [ "dom"],
-    // "types": ["node"],
-
-    // Fallback wenn nach d.ts Files gesucht wird
-    // "typeRoots": ["node_modules/@types", "src/types"]
-  },
-  // https://github.com/s-panferov/awesome-typescript-loader
-  "awesomeTypescriptLoaderOptions": {
-    "useCache":                       false,
-    "reportFiles": [
-      "src/**/*.{ts,tsx}"
-    ]
-  },
-  "include" : [
-    "src/index.ts",
-    "src/main/ts/**/*.ts",
-    "src/test/ts/**/*.ts",
-    "src/site/images",
-
-    // Damit werden die images erkannt
-    "src/site/images/typings.d.ts"
-  ],
-  "exclude": [
-    "lib",
-    "node_modules"
-  ]
+        // Damit werden die images erkannt
+        "src/site/images/typings.d.ts"
+    ],
+    "exclude": ["lib", "node_modules"]
 }
