--- a/package.json
+++ b/package.json
@@ -1,85 +1,94 @@
 {
-  "name": "@mmit/typescript-starter",
-  "author": "Mike Mitterer",
-  "version": "0.2.0",
-  "description": "This is a starter project for typescript projects",
-  "license": "MIT",
-  "type-check": "tsc",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
-  "scripts": {
-    "start": "NODE_ENV=development webpack-dev-server --config webpack.web.js --mode development",
-    "tc": "tsc --noEmit",
-    "tc:watch": "npm run tc -- --watch",
-    "build": "rm -rf lib && npm run build:types && npm run build:js",
-    "build:types": "tsc --emitDeclarationOnly && rm -rf lib/test",
-    "build:js": "babel src --out-dir lib --ignore src/test/* --extensions \".ts,.tsx\" --source-maps inline",
-    "build:js:dart": "babel src --out-dir src/main/dart/web/assets/js --ignore src/test/* --extensions \".ts,.tsx\" --source-maps inline",
-    "bundle": "NODE_ENV=development webpack --config webpack.web.js --mode development",
-    "bundle:dart": "NODE_ENV=development USE_DART=true webpack --config webpack.dart.js --mode development",
-    "bundle:prod": "NODE_ENV=production webpack --config webpack.web.js --mode production",
-    "test": "jest",
-    "deploy:lib": "rm -rf lib && npm run build && cat package.json | sed -E -e 's/\"(lib|dist)\\/*/\"/g' > lib/package.json && cp README.md lib/",
-    "deploy:web": "rm -rf dist && npm run bundle && cat package.json | sed -E -e 's/\"(lib|dist)\\//\"js\\//g' > dist/package.json && cp README.md dist/",
-    "deploy:web:prod": "rm -rf dist && npm run bundle:prod && cat package.json | sed -E -e 's/\"(lib|dist)\\//\"js\\//g' > dist/package.json && cp README.md dist/",
-    "doc": "typedoc --out doc"
-  },
-  "files": [
-    "lib"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/MikeMitterer/typescript-training"
-  },
-  "dependencies": {
-    "typescript-logging": "^0.6.3"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.1.5",
-    "@babel/core": "^7.1.2",
-    "@babel/node": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/preset-env": "^7.1.6",
-    "@babel/preset-typescript": "^7.1.0",
-    "@types/core-js": "^2.5.0",
-    "@types/jest": "^23.3.9",
-    "@types/node": "^10.0.0",
-    "@types/shelljs": "^0.8.0",
-    "autoprefixer": "^9.3.1",
-    "awesome-typescript-loader": "^5.2.1",
-    "babel-loader": "^8.0.4",
-    "babel-preset-modern-browsers": "^13.0.0",
-    "clean-webpack-plugin": "^1.0.0",
-    "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^1.0.0",
-    "file-loader": "^2.0.0",
-    "html-beautify-webpack-plugin": "^1.0.5",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "html-webpack-string-replace-plugin": "^1.1.0",
-    "jest": "^23.6.0",
-    "jest-cli": "^23.6.0",
-    "mini-css-extract-plugin": "^0.4.5",
-    "node-sass": "^4.10.0",
-    "postcss": "^7.0.6",
-    "postcss-loader": "^3.0.0",
-    "sass-loader": "^7.0.0",
-    "semver": "^5.6.0",
-    "shelljs": "^0.8.3",
-    "style-loader": "^0.23.0",
-    "ts-jest": "^23.10.5",
-    "ts-loader": "^5.0.0",
-    "ts-node": "^7.0.0",
-    "tslint": "^5.9.1",
-    "tslint-loader": "^3.5.4",
-    "typedoc": "^0.13.0",
-    "typescript": "^3.1.6",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.26.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10",
-    "webpack-livereload-plugin": "^2.1.1",
-    "webpack-node-externals": "^1.7.2"
-  }
+    "name": "@mmit/typescript-starter",
+    "author": "Mike Mitterer",
+    "version": "0.6.0",
+    "description": "This is a starter project for typescript projects",
+    "license": "MIT",
+    "type-check": "tsc",
+    "main": "lib/index.js",
+    "typings": "./lib/index.d.ts",
+    "scripts": {
+        "start": "NODE_ENV=development webpack-dev-server --config webpack.web.js --mode development",
+        "tc": "tsc --noEmit",
+        "tc:watch": "npm run tc -- --watch",
+        "build": "rm -rf lib && npm run build:types && npm run build:js",
+        "build:types": "tsc --emitDeclarationOnly && rm -rf lib/test",
+        "build:js": "babel src --out-dir lib --ignore src/test/* --extensions \".ts,.tsx\" --source-maps inline",
+        "bundle": "NODE_ENV=development webpack --config webpack.web.js --mode development",
+        "bundle:node": "NODE_ENV=development webpack --config webpack.node.js --mode development",
+        "bundle:prod": "NODE_ENV=production webpack --config webpack.web.js --mode production",
+        "test": "jest",
+        "deploy:lib": "rm -rf lib && npm run build && cat package.json | sed -E -e 's/\"(lib|dist)\\/*/\"/g' > lib/package.json && cp README.md lib/",
+        "deploy:web": "rm -rf dist && npm run bundle && cat package.json | sed -E -e 's/\"(lib|dist)\\//\"js\\//g' > dist/package.json && cp README.md dist/",
+        "deploy:web:prod": "rm -rf dist && npm run bundle:prod && cat package.json | sed -E -e 's/\"(lib|dist)\\//\"js\\//g' > dist/package.json && cp README.md dist/",
+        "doc": "typedoc --out doc"
+    },
+    "files": [
+        "lib"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/MikeMitterer/typescript-training"
+    },
+    "dependencies": {
+        "@mmit/mobiad-communication": "^0.10.11",
+        "@types/ws": "^6.0.1",
+        "isomorphic-ws": "^4.0.1",
+        "moment": "^2.24.0",
+        "source-map-loader": "^0.2.4",
+        "typescript-logging": "^0.6.3",
+        "ws": "^6.1.4"
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.1.5",
+        "@babel/core": "^7.1.2",
+        "@babel/node": "^7.0.0",
+        "@babel/plugin-proposal-class-properties": "^7.1.0",
+        "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+        "@babel/plugin-transform-runtime": "^7.2.0",
+        "@babel/preset-env": "^7.1.6",
+        "@babel/preset-typescript": "^7.1.0",
+        "@babel/runtime": "^7.3.1",
+        "@types/core-js": "^2.5.0",
+        "@types/jest": "^24.0.6",
+        "@types/node": "^11.9.4",
+        "@types/shelljs": "^0.8.0",
+        "autoprefixer": "^9.3.1",
+        "awesome-typescript-loader": "^5.2.1",
+        "babel-loader": "^8.0.4",
+        "babel-preset-modern-browsers": "^13.0.0",
+        "clean-webpack-plugin": "^1.0.0",
+        "copy-webpack-plugin": "^5.0.0",
+        "css-loader": "^2.1.0",
+        "file-loader": "^3.0.1",
+        "html-beautify-webpack-plugin": "^1.0.5",
+        "html-loader": "^0.5.5",
+        "html-webpack-plugin": "^3.2.0",
+        "html-webpack-string-replace-plugin": "^1.1.0",
+        "jest": "^24.1.0",
+        "jest-cli": "^24.1.0",
+        "jest-extended": "^0.11.1",
+        "mini-css-extract-plugin": "^0.5.0",
+        "node-sass": "^4.10.0",
+        "postcss": "^7.0.6",
+        "postcss-loader": "^3.0.0",
+        "sass-loader": "^7.0.0",
+        "semver": "^5.6.0",
+        "shelljs": "^0.8.3",
+        "style-loader": "^0.23.0",
+        "ts-jest": "^24.0.0",
+        "ts-loader": "^5.0.0",
+        "ts-node": "^8.0.2",
+        "tslint": "^5.9.1",
+        "tslint-loader": "^3.5.4",
+        "tslint-override": "^0.5.0",
+        "typedoc": "^0.14.2",
+        "typescript": "^3.1.6",
+        "url-loader": "^1.1.2",
+        "webpack": "^4.26.1",
+        "webpack-cli": "^3.1.2",
+        "webpack-dev-server": "^3.1.10",
+        "webpack-livereload-plugin": "^2.1.1",
+        "webpack-node-externals": "^1.7.2"
+    }
 }
