Update in Kombination mit dem 'communication' modul

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
 {
     "compileOnSave": true,
     "compilerOptions": {
+        "strict": true,
+
         "target": "esnext",
 
         "outDir": "./lib",
@@ -25,17 +27,25 @@
         "removeComments": false,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
+
+        // Muss auf true sein da sonst z.B. keine Images
+        // oder JS-Libs ohne expliziten export importiert werden können
         "allowSyntheticDefaultImports": true,
+
         "strictFunctionTypes": true,
 
         // Enables emit interoperability between CommonJS and ES Modules
-        // via creation of namespace objects for all imports.
+        // via creation of namespace object for all imports.
         // Implies 'allowSyntheticDefaultImports'
         //
         // Import von Images funkt nicht mehr
+        // AutoCompletion funkt nicht mehr
         // "esModuleInterop": true,
 
-        "strict": true,
+        // Dient zum importieren von json-Files
+        // "resolveJsonModule": true,
+
+        "esModuleInterop": true,
 
         // wird mit tsc erstellt
         "declaration": true,
@@ -45,15 +55,15 @@
         //
         //"declarationDir" :               "dist",
 
-        "baseUrl": "./src",
-        "paths": {
+        // "baseUrl": "./src",
+        // "paths": {
             // Pfade müssen auch in WebPack entsprechend definiert sein!
             // Funktioniert nicht!
             //  https://github.com/Microsoft/TypeScript/issues/10866
             // "@main/*":                     [ "main/ts/*"],
             // "@test/*":                     [ "test/ts/*"],
             // "@images/*":                   [ "site/images/*"]
-        },
+        // },
 
         "lib": ["esnext", "dom"]
         // "lib": [ "dom"],
@@ -71,10 +81,10 @@
         "src/index.ts",
         "src/main/**/*.ts",
         "src/test/**/*.ts",
-        "src/site/images",
 
         // Damit werden die images erkannt
-        "src/site/images/typings.d.ts"
+        "src/site/images/typings.d.ts",
+        "src/site/images"
     ],
     "exclude": ["lib", "node_modules"]
 }
