--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
         "url": "https://github.com/MikeMitterer/typescript-training"
     },
     "dependencies": {
-        "@mmit/mobiad-communication": "^0.10.11",
-        "@types/ws": "^6.0.1",
+        "axios": "^0.18.0",
         "isomorphic-ws": "^4.0.1",
         "moment": "^2.24.0",
         "source-map-loader": "^0.2.4",
@@ -53,11 +52,12 @@
         "@types/jest": "^24.0.6",
         "@types/node": "^11.9.4",
         "@types/shelljs": "^0.8.0",
+        "@types/ws": "^6.0.1",
         "autoprefixer": "^9.3.1",
         "awesome-typescript-loader": "^5.2.1",
         "babel-loader": "^8.0.4",
         "babel-preset-modern-browsers": "^13.0.0",
-        "clean-webpack-plugin": "^1.0.0",
+        "clean-webpack-plugin": "^2.0.0",
         "copy-webpack-plugin": "^5.0.0",
         "css-loader": "^2.1.0",
         "file-loader": "^3.0.1",
