--- a/package.json
+++ b/package.json
@@ -1,94 +1,95 @@
 {
-    "name": "@mmit/typescript-starter",
-    "author": "Mike Mitterer",
-    "version": "0.6.0",
-    "description": "This is a starter project for typescript projects",
-    "license": "MIT",
-    "type-check": "tsc",
-    "main": "lib/index.js",
-    "typings": "./lib/index.d.ts",
-    "scripts": {
-        "start": "NODE_ENV=development webpack-dev-server --config webpack.web.js --mode development",
-        "tc": "tsc --noEmit",
-        "tc:watch": "npm run tc -- --watch",
-        "build": "rm -rf lib && npm run build:types && npm run build:js",
-        "build:types": "tsc --emitDeclarationOnly && rm -rf lib/test",
-        "build:js": "babel src --out-dir lib --ignore src/test/* --extensions \".ts,.tsx\" --source-maps inline",
-        "bundle": "NODE_ENV=development webpack --config webpack.web.js --mode development",
-        "bundle:node": "NODE_ENV=development webpack --config webpack.node.js --mode development",
-        "bundle:prod": "NODE_ENV=production webpack --config webpack.web.js --mode production",
-        "test": "jest",
-        "deploy:lib": "rm -rf lib && npm run build && cat package.json | sed -E -e 's/\"(lib|dist)\\/*/\"/g' > lib/package.json && cp README.md lib/",
-        "deploy:web": "rm -rf dist && npm run bundle && cat package.json | sed -E -e 's/\"(lib|dist)\\//\"js\\//g' > dist/package.json && cp README.md dist/",
-        "deploy:web:prod": "rm -rf dist && npm run bundle:prod && cat package.json | sed -E -e 's/\"(lib|dist)\\//\"js\\//g' > dist/package.json && cp README.md dist/",
-        "doc": "typedoc --out doc"
-    },
-    "files": [
-        "lib"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/MikeMitterer/typescript-training"
-    },
-    "dependencies": {
-        "axios": "^0.18.0",
-        "isomorphic-ws": "^4.0.1",
-        "moment": "^2.24.0",
-        "source-map-loader": "^0.2.4",
-        "typescript-logging": "^0.6.3",
-        "ws": "^6.1.4"
-    },
-    "devDependencies": {
-        "@babel/cli": "^7.1.5",
-        "@babel/core": "^7.1.2",
-        "@babel/node": "^7.0.0",
-        "@babel/plugin-proposal-class-properties": "^7.1.0",
-        "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-        "@babel/plugin-transform-runtime": "^7.2.0",
-        "@babel/preset-env": "^7.1.6",
-        "@babel/preset-typescript": "^7.1.0",
-        "@babel/runtime": "^7.3.1",
-        "@types/core-js": "^2.5.0",
-        "@types/jest": "^24.0.6",
-        "@types/node": "^11.9.4",
-        "@types/shelljs": "^0.8.0",
-        "@types/ws": "^6.0.1",
-        "autoprefixer": "^9.3.1",
-        "awesome-typescript-loader": "^5.2.1",
-        "babel-loader": "^8.0.4",
-        "babel-preset-modern-browsers": "^13.0.0",
-        "clean-webpack-plugin": "^2.0.0",
-        "copy-webpack-plugin": "^5.0.0",
-        "css-loader": "^2.1.0",
-        "file-loader": "^3.0.1",
-        "html-beautify-webpack-plugin": "^1.0.5",
-        "html-loader": "^0.5.5",
-        "html-webpack-plugin": "^3.2.0",
-        "html-webpack-string-replace-plugin": "^1.1.0",
-        "jest": "^24.1.0",
-        "jest-cli": "^24.1.0",
-        "jest-extended": "^0.11.1",
-        "mini-css-extract-plugin": "^0.5.0",
-        "node-sass": "^4.10.0",
-        "postcss": "^7.0.6",
-        "postcss-loader": "^3.0.0",
-        "sass-loader": "^7.0.0",
-        "semver": "^5.6.0",
-        "shelljs": "^0.8.3",
-        "style-loader": "^0.23.0",
-        "ts-jest": "^24.0.0",
-        "ts-loader": "^5.0.0",
-        "ts-node": "^8.0.2",
-        "tslint": "^5.9.1",
-        "tslint-loader": "^3.5.4",
-        "tslint-override": "^0.5.0",
-        "typedoc": "^0.14.2",
-        "typescript": "^3.1.6",
-        "url-loader": "^1.1.2",
-        "webpack": "^4.26.1",
-        "webpack-cli": "^3.1.2",
-        "webpack-dev-server": "^3.1.10",
-        "webpack-livereload-plugin": "^2.1.1",
-        "webpack-node-externals": "^1.7.2"
-    }
+  "name": "@mmit/typescript-starter",
+  "author": "Mike Mitterer",
+  "version": "0.6.0",
+  "description": "This is a starter project for typescript projects",
+  "license": "MIT",
+  "type-check": "tsc",
+  "main": "./lib/index.js",
+  "typings": "./lib/index.d.ts",
+  "scripts": {
+    "start": "NODE_ENV=development webpack-dev-server --config webpack.web.js --mode development",
+    "build": "rm -rf lib && yarn run build:ts",
+    "build:ts": "tsc --rootDir src/main --project tsconfig.lib.json --declaration --outDir lib",
+    "build:ts:watch": "tsc --rootDir src/main --declaration --outDir lib --watch",
+    "build:types": "tsc --rootDir src/main --declaration --outDir lib --emitDeclarationOnly",
+    "build:js": "babel src/main --out-dir lib --extensions \".ts,.tsx\" --source-maps",
+    "deploy": "rm -rf lib && yarn run build:ts",
+    "deploy:node": "rm -rf bin && NODE_ENV=development webpack --config webpack.node.js --mode development",
+    "deploy:node:prod": "NODE_ENV=production webpack --config webpack.node.js --mode production",
+    "deploy:web": "rm -rf dist && NODE_ENV=development webpack --config webpack.web.js --mode development",
+    "deploy:web:prod": "rm -rf dist && NODE_ENV=production webpack --config webpack.web.js --mode production",
+    "publish": "yarn run build && yarn version --new-version patch && yarn publish --non-interactive",
+    "test": "jest",
+    "test:unit": "jest src/test/unit",
+    "test:integration": "jest src/test/integration",
+    "doc": "typedoc --out doc",
+    "clean": "rm -rf lib dist bin doc && jest --clearCache"
+  },
+  "files": [
+    "lib",
+    "src"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MikeMitterer/typescript-training"
+  },
+  "dependencies": {
+    "moment": "^2.24.0",
+    "source-map-loader": "^0.2.4",
+    "typescript-logging": "^0.6.3"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.4",
+    "@babel/node": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
+    "@babel/plugin-transform-runtime": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-typescript": "^7.3.3",
+    "@babel/runtime": "^7.3.4",
+    "@types/core-js": "^2.5.0",
+    "@types/jest": "^24.0.11",
+    "@types/node": "^11.11.0",
+    "@types/shelljs": "^0.8.3",
+    "@types/ws": "^6.0.1",
+    "autoprefixer": "^9.4.10",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.0.5",
+    "babel-preset-modern-browsers": "^13.1.0",
+    "clean-webpack-plugin": "^2.0.0",
+    "copy-webpack-plugin": "^5.0.0",
+    "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
+    "html-beautify-webpack-plugin": "^1.0.5",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-string-replace-plugin": "^1.1.0",
+    "jest": "^24.3.1",
+    "jest-cli": "^24.3.1",
+    "jest-extended": "^0.11.1",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
+    "postcss": "^7.0.14",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
+    "semver": "^5.3.0",
+    "shelljs": "^0.8.3",
+    "style-loader": "^0.23.1",
+    "ts-jest": "^24.0.0",
+    "ts-loader": "^5.3.3",
+    "ts-node": "^8.0.3",
+    "tslint": "^5.13.1",
+    "tslint-loader": "^3.5.4",
+    "tslint-override": "^0.5.0",
+    "typedoc": "^0.14.2",
+    "typescript": "^3.3.3333",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.1",
+    "webpack-livereload-plugin": "^2.2.0",
+    "webpack-node-externals": "^1.7.2"
+  }
 }
