--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "deploy:node:prod": "NODE_ENV=production webpack --config webpack.node.js --mode production",
     "deploy:web": "rm -rf dist && NODE_ENV=development webpack --config webpack.web.js --mode development",
     "deploy:web:prod": "rm -rf dist && NODE_ENV=production webpack --config webpack.web.js --mode production",
-    "publish": "yarn run build && yarn version --new-version patch && yarn publish --non-interactive",
+    "pub": "yarn run build && yarn version --new-version patch && yarn publish --non-interactive",
     "test": "jest",
     "test:unit": "jest src/test/unit",
     "test:integration": "jest src/test/integration",
