pub and pub:public added in packages

--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "deploy:node:prod": "NODE_ENV=production webpack --config webpack.node.js --mode production",
     "deploy:web": "rm -rf dist && NODE_ENV=development webpack --config webpack.web.js --mode development",
     "deploy:web:prod": "rm -rf dist && NODE_ENV=production webpack --config webpack.web.js --mode production",
-    "pub": "yarn run build && yarn version --new-version patch && yarn publish --non-interactive",
+    "pub": "yarn run test && yarn run build && yarn version --new-version patch && yarn publish --access restricted --non-interactive",
+    "pub:public": "yarn run test && yarn run build && yarn version --new-version patch && yarn publish --non-interactive",
     "test": "jest",
     "test:unit": "jest src/test/unit",
     "test:integration": "jest src/test/integration",
     "doc": "typedoc --out doc",
-    "clean": "rm -rf lib dist bin doc && jest --clearCache"
+    "clean": "rm -rf lib dist bin doc && jest --clearCache",
+    "prettier": "onchange './src/**/*.ts'  -- prettier --write {{changed}}"
   },
   "files": [
     "lib",
