--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "author": "Mike Mitterer",
   "version": "0.6.1",
   "description": "This is a starter project for typescript projects",
+  "keywords": [
+    "typescript"
+  ],
   "license": "MIT",
   "type-check": "tsc",
   "main": "./lib/index.js",
   "typings": "./lib/index.d.ts",
   "scripts": {
-    "start": "NODE_ENV=development webpack-dev-server --config webpack.web.js --mode development",
+    "start": "NODE_ENV=development webpack-dev-server --config webpack.web.js --mode development --open",
     "build": "rm -rf lib && yarn run build:ts",
     "build:ts": "tsc --rootDir src/main --project tsconfig.lib.json --declaration --outDir lib",
     "build:ts:watch": "tsc --rootDir src/main --declaration --outDir lib --watch",
@@ -53,24 +56,26 @@
     "@babel/runtime": "^7.3.4",
     "@types/core-js": "^2.5.0",
     "@types/jest": "^24.0.11",
-    "@types/node": "^11.11.0",
+    "@types/node": "^11.11.3",
     "@types/shelljs": "^0.8.3",
     "@types/ws": "^6.0.1",
-    "autoprefixer": "^9.4.10",
+    "autoprefixer": "^9.5.0",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.5",
     "babel-preset-modern-browsers": "^13.1.0",
-    "clean-webpack-plugin": "^2.0.0",
-    "copy-webpack-plugin": "^5.0.0",
+    "clean-webpack-plugin": "^2.0.1",
+    "copy-webpack-plugin": "^5.0.1",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "html-beautify-webpack-plugin": "^1.0.5",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-string-replace-plugin": "^1.1.0",
-    "jest": "^24.3.1",
-    "jest-cli": "^24.3.1",
+    "jest": "^24.5.0",
+    "jest-cli": "^24.5.0",
     "jest-extended": "^0.11.1",
+    "jest-haste-map": "^24.5.0",
+    "jest-resolve": "^24.5.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "postcss": "^7.0.14",
@@ -82,7 +87,8 @@
     "ts-jest": "^24.0.0",
     "ts-loader": "^5.3.3",
     "ts-node": "^8.0.3",
-    "tslint": "^5.13.1",
+    "tslint": "^5.14.0",
+    "tslint-consistent-codestyle": "^1.15.1",
     "tslint-loader": "^3.5.4",
     "tslint-override": "^0.5.0",
     "typedoc": "^0.14.2",
