--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,11 @@
         // Damit werden die images erkannt
         "src/browser/**/*.ts",
         "src/site/images/typings.d.ts",
-        "src/site/images"
+        "src/site/images",
+
+        // Hier werden die auch die Tests eingebunden
+        // Nur damit funktioniert das überschreiben in der "prototype"-chain
+        // Nur damit funktioniert JEST richtig - bzw. die Kombi WS + JEST
+        "src/test/**/*.ts"
     ]
 }
