--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "url": "https://github.com/MikeMitterer/typescript-training"
   },
   "dependencies": {
+    "global": "^4.3.2",
     "moment": "^2.24.0",
+    "ntl": "^3.2.1",
     "source-map-loader": "^0.2.4",
     "typescript-logging": "^0.6.3"
   },
