--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "main": "./lib/index.js",
   "typings": "./lib/index.d.ts",
   "scripts": {
+    "gen:barrels": "barrelsby --delete -d src/main --exclude ConfigLog4j --exclude 'events/utils' -l top -s filesystem",
     "start": "NODE_ENV=development webpack-dev-server --config webpack.web.js --mode development --open",
     "build": "rm -rf lib && yarn run build:ts",
     "build:ts": "tsc --rootDir src/main --project tsconfig.lib.json --declaration --outDir lib",
@@ -25,8 +26,8 @@
     "pub": "yarn run test && yarn run build && yarn version --new-version patch && yarn publish --access restricted --non-interactive",
     "pub:public": "yarn run test && yarn run build && yarn version --new-version patch && yarn publish --non-interactive",
     "test": "jest",
-    "test:unit": "jest src/test/unit",
-    "test:integration": "jest src/test/integration",
+    "test:unit": "jest --colors src/test/unit",
+    "test:integration": "jest --colors src/test/integration",
     "doc": "typedoc --out doc",
     "clean": "rm -rf lib dist bin doc && jest --clearCache",
     "prettier": "onchange './src/**/*.ts'  -- prettier --write {{changed}}"
@@ -42,63 +43,64 @@
   "dependencies": {
     "global": "^4.3.2",
     "moment": "^2.24.0",
-    "ntl": "^3.2.1",
+    "ntl": "^3.2.4",
     "source-map-loader": "^0.2.4",
     "typescript-logging": "^0.6.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.4",
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
     "@babel/node": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.3.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
-    "@babel/plugin-transform-runtime": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
+    "@babel/plugin-transform-runtime": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
     "@babel/preset-typescript": "^7.3.3",
-    "@babel/runtime": "^7.3.4",
+    "@babel/runtime": "^7.4.3",
     "@types/core-js": "^2.5.0",
     "@types/jest": "^24.0.11",
-    "@types/node": "^11.11.3",
-    "@types/shelljs": "^0.8.3",
+    "@types/node": "^11.13.2",
+    "@types/shelljs": "^0.8.4",
     "@types/ws": "^6.0.1",
-    "autoprefixer": "^9.5.0",
+    "autoprefixer": "^9.5.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.5",
-    "babel-preset-modern-browsers": "^13.1.0",
+    "babel-preset-modern-browsers": "^14.0.0",
+    "barrelsby": "^2.0.0",
     "clean-webpack-plugin": "^2.0.1",
-    "copy-webpack-plugin": "^5.0.1",
+    "copy-webpack-plugin": "^5.0.2",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "html-beautify-webpack-plugin": "^1.0.5",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-string-replace-plugin": "^1.1.0",
-    "jest": "^24.5.0",
-    "jest-cli": "^24.5.0",
+    "jest": "^24.7.1",
+    "jest-cli": "^24.7.1",
     "jest-extended": "^0.11.1",
-    "jest-haste-map": "^24.5.0",
-    "jest-resolve": "^24.5.0",
-    "mini-css-extract-plugin": "^0.5.0",
+    "jest-haste-map": "^24.7.1",
+    "jest-resolve": "^24.7.1",
+    "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.11.0",
     "postcss": "^7.0.14",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
-    "semver": "^5.3.0",
+    "semver": "^6.0.0",
     "shelljs": "^0.8.3",
     "style-loader": "^0.23.1",
-    "ts-jest": "^24.0.0",
+    "ts-jest": "^24.0.2",
     "ts-loader": "^5.3.3",
     "ts-node": "^8.0.3",
-    "tslint": "^5.14.0",
+    "tslint": "^5.15.0",
     "tslint-consistent-codestyle": "^1.15.1",
     "tslint-loader": "^3.5.4",
     "tslint-override": "^0.5.0",
     "typedoc": "^0.14.2",
-    "typescript": "^3.3.3333",
+    "typescript": "^3.4.3",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.1",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.3.1",
     "webpack-livereload-plugin": "^2.2.0",
     "webpack-node-externals": "^1.7.2"
   }
