Tests laufen wieder

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "gen:barrels": "barrelsby --delete -d src/main --exclude ConfigLog4j --exclude 'events/utils' -l top -s filesystem",
     "start": "NODE_ENV=development webpack-dev-server --config webpack.web.js --mode development --open",
     "build": "rm -rf lib && yarn run build:ts",
-    "build:ts": "tsc --rootDir src/main --project tsconfig.lib.json --declaration --outDir lib",
+    "build:ts": "tsc --rootDir $(pwd)/src/main --project tsconfig.lib.json --declaration --outDir $(pwd)/lib",
     "build:ts:watch": "tsc --rootDir src/main --declaration --outDir lib --watch",
     "build:types": "tsc --rootDir src/main --declaration --outDir lib --emitDeclarationOnly",
     "build:js": "babel src/main --out-dir lib --extensions \".ts,.tsx\" --source-maps",
@@ -59,7 +59,7 @@
     "@babel/runtime": "^7.4.3",
     "@types/core-js": "^2.5.0",
     "@types/jest": "^24.0.11",
-    "@types/node": "^11.13.2",
+    "@types/node": "^11.13.4",
     "@types/shelljs": "^0.8.4",
     "@types/ws": "^6.0.1",
     "autoprefixer": "^9.5.1",
