--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,15 +21,18 @@
     "extends": "./tsconfig.lib",
     "include": [
         // Damit werden die images erkannt
-        "src/browser/**/*.ts",
-        "src/site/images/typings.d.ts",
-        "src/site/images"
+        // "src/browser/**/*.ts",
+        // "src/site/images/typings.d.ts",
+        // "src/site/images",
 
         // Hier werden die auch die Tests eingebunden
         // Nur damit funktioniert das überschreiben in der "prototype"-chain
         // Nur damit funktioniert JEST richtig - bzw. die Kombi WS + JEST
-        // "src/test/**/*.ts"
-        // "node_modules/tslint-override/register.d.ts"
+        "src/test/**/*.ts",
+        "node_modules/tslint-override/register.d.ts",
+
+        // QUnit scheint sonst nicht zu funktionieren
+        "node_modules/@types/qunit/index.d.ts"
 
         // Test-Config file
         // Damit das funktioniert muss auch
