Now with E2E_TEST as prefix for puppeteer-Tests

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test": "yarn run test:unit && yarn run test:integration",
     "test:unit": "jest --colors src/test/unit",
     "test:integration": "jest --colors --runInBand --detectOpenHandles src/test/integration",
+    "test:e2e": "E2E_TEST='true' jest --colors --runInBand --detectOpenHandles src/test/e2e",
     "doc": "typedoc --out doc",
     "clean": "rm -rf lib dist bin doc && jest --clearCache",
     "prettier": "onchange './src/**/*.ts'  -- prettier --write {{changed}}"
