--- a/.babelrc
+++ b/.babelrc
@@ -17,7 +17,12 @@
     "plugins": [
         "@babel/proposal-class-properties",
         "@babel/proposal-object-rest-spread",
-        "@babel/plugin-transform-runtime"
+        "@babel/plugin-transform-runtime",
+        ["transform-inline-environment-variables", {
+            "include": [
+                "NODE_ENV", "REQUIRE_TARGET"
+            ]
+        }]
     ],
     "env": {
         "node": {
