--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "typings": "./lib/index.d.ts",
   "scripts": {
     "gen:barrels": "barrelsby --delete -d src/main --exclude ConfigLog4j --exclude 'events/utils' -l top -s filesystem",
-    "start": "NODE_ENV=development webpack-dev-server --config webpack.web.js --mode development --open",
+    "serve": "NODE_ENV=development webpack-dev-server --config webpack.web.js --mode development",
+    "start": "yarn serve --open",
     "tc": "tsc --noEmit",
     "tc:watch": "npm run tc -- --watch",
     "build": "rm -rf lib && yarn run build:ts",
@@ -25,7 +26,7 @@
     "build:web": "rm -rf dist && NODE_ENV=development webpack --config webpack.web.js --mode development",
     "build:web:prod": "rm -rf dist && NODE_ENV=production webpack --config webpack.web.js --mode production",
     "deploy": "yarn run test && yarn run build && yarn version --new-version patch && yarn publish --non-interactive",
-    "test": "yarn run test:unit && yarn run test:integration",
+    "test": "yarn run test:unit && yarn run test:e2e",
     "test:unit": "jest --colors src/test/unit",
     "test:integration": "jest --colors --runInBand --detectOpenHandles src/test/integration",
     "test:e2e": "E2E_TEST='true' jest --colors --runInBand --detectOpenHandles src/test/e2e",
@@ -42,7 +43,6 @@
     "url": "https://github.com/MikeMitterer/typescript-training"
   },
   "dependencies": {
-    "@types/qunit": "^2.9.0",
     "global": "^4.3.2",
     "moment": "^2.24.0",
     "ntl": "^3.2.4",
@@ -65,11 +65,13 @@
     "@types/jest": "^24.0.12",
     "@types/node": "^12.0.0",
     "@types/puppeteer": "^1.12.4",
+    "@types/qunit": "^2.9.0",
     "@types/shelljs": "^0.8.5",
     "@types/ws": "^6.0.1",
     "autoprefixer": "^9.5.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.5",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "babel-preset-modern-browsers": "^14.0.0",
     "barrelsby": "^2.1.1",
     "clean-webpack-plugin": "^2.0.2",
